v0.3.9
* Added: French Translations for Timer/Enrage Timer.
* Added: French Translations for Timer/Enrage Timer Options.
----
v0.3.8
* New: Encounter Timer.
* New: Hard Enrage Timer.
* Added: French Translations to King Molinar casts
* Added: French Translations to Prince Dollin casts.
* Added: French Translations to King Molinar timers.
* Added: French Translations to Prince Dollin timers.
* Added: Murdantix Enrage Timer.
* Added: Vladmal Prime Enrage Timer.
* Added: Sicaron Enrage Timer.
* Added: King Molinar and Prince Dollin Enrage Timer.
* Added: Estrode Enrage Timer.
* Added: Grugonim Enrage Timer.
* Added: Inquisitor Garau Enrage Timer.
* Added: T-SM support for Matron Zamira.
* Added: Further French translations to the Options Window.
* Change: NPC Chat triggers now use the new "Notify" trigger method.
* Fixed: Damage timers where not triggering correctly, if at all.
----
v0.3.7
* New: Tank-Swap Monitor (T-SM).
* Added: Tank-Swap Monitor to Murdantix. (Experimental, but safe)
* Added: Tank-Swap Monitor to Grugonim. (Experimental, but safe)
* Added: Tank-Swap Options to GUI Options window.
* Added: French Client support for Murdantix Soul Trauma.
* Added: French Client support for Murdantix Demonic Blast.
* Added: Grugonim boss encounter (template).
* Added: Inwar Darktide boss encounter (template).
* Added: Sicaron boss encounter (template).
* Added: Estrode boss encounter (template).
* Added: Added more translation templates to various bosses.
* Change: Murdantix Demonic Blast timer reduces by 1s
* Fixed: Vladmir Prime Ancient Flames.
* Fixed: Error messages for "Notify" type events.
* Fixed: French Translation for Mangling Crush.
----
v0.3.6
* Added: Inquisitor Garau, French client support.
* Added: Inquisitor Garau, French client support for Arcane Essence.
* Added: Inquisitor Garau, partial French client support for Arcane Porters.
* Added: Inquisitor Garau, partial French client support for Infused Crawlers.